test/sds/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-sds

  labels:
    istio-injection: disabled
